text contrast test

--- a/index.html
+++ b/index.html
@@ -243,11 +243,10 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
-						Partenaires
+						<p>Partenaires</p>
 							<ul>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
@@ -256,7 +255,7 @@
 							</ul>		
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 1
+						<p> Annuaires liste 1</p>
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -270,7 +269,7 @@
 						</ul>
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 2
+						<p> Annuaires liste 2</p>
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
