--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>Accueil</title>
+    <title>L'agence de web design - La Panthère</title>
 
     
 <!-- Analytics -->
