--- a/page2.html
+++ b/page2.html
@@ -17,7 +17,7 @@
 	<script src="./js/blocs.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>Contact</title>
+    <title>Contact - L'agence de web design - La Panthère</title>
 
     
 <!-- Analytics -->
